# how-to-get-there

./: .gitignore  README.md  app.py  pyproject.toml  run.py
api/: app.py  map_geometry.py  routes.py  serialization.py
config/: gtfs.py  logging.py  metro.py  osm.py  park_and_ride.py  settings.py
data/config/: metro.json  park_and_ride.json
database/: connection.py  queries.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: AddressSearch.jsx  App.jsx  RouteMap.jsx  api.js  geocoding.js  journeyDisplay.js  main.jsx  mapColors.js  theme.js
frontend/src/language/: LanguageContext.jsx  routeLabels.js  translations.js
scripts/: clear_gtfs_tables.py  download_gtfs.py  download_osm_road_network.py  import_gtfs.py  import_osm_road_network.py  import_zdm_apr_profiles.py  profile_route_request.py  update_gtfs.py  update_osm_road_network.py
services/: car_routing.py  geocoding.py  gtfs_geometry.py  park_and_ride.py  public_transport.py  route_comparison.py  traffic_profiles.py  zdm_apr.py
tests/: test_api.py  test_car_routing.py  test_geocoding.py  test_gtfs_geometry.py  test_map_geometry.py  test_metro_gtfs.py  test_osm_import.py  test_park_and_ride.py  test_public_transport.py  test_route_comparison.py  test_route_performance.py  test_schedule_service_date.py  test_serialization.py  test_traffic_profiles.py  test_walk_routing.py
